# dddmisc-example

./: .gitignore  pyproject.toml  workspace.toml
bases/examples/users/user_svc/domain/: __init__.py
bases/examples/users/user_svc/domain/model/: commands.py  events.py  exceptions.py
bases/examples/users/user_svc/domain/model/user/: abstractions.py  aggregate.py  entities.py
bases/examples/users/user_svc/domain/usecases/: usecases.py
tests/unit/domain/user_model/: test_aggregate.py  test_entities.py
