[tool.poetry]
name = "dddmisc-example"
version = "0.1.0"
description = ""
authors = ["koinegen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dddmisc-messagebus = "^0.7.0"
dddmisc-domain = "^0.6.0"
pydantic = "^2.9.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"